# Webserv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  chunked.txt  config.md  curltest.sh  databasedelete.py  docker-compose.yml  http_tcpServer_linux.cpp  http_tcpServer_linux.h  main.cpp  rebuild.sh  run.sh  setup.sh  temp.cpp  temp.h
conf/: default.conf  hey.txt  nginx.conf  test.conf
conf/nginx/: nginx.conf
database/: ClapTrap.hpp  Makefile  test.cpp  testo  text.txt
root/html/: 403-Forbidden.html  404-NotFound.html  delete.html  favicon.icon  gallery.html  home.html  index copy.html  index.html  index2.html  nginx.html  postrequest.html  style.css
root/html/admin/: index.html
root/html/contact/: index.html  index2.html  style.css
root/html/errors/: 500-InternalServerError.html
root/html/file/: index.html
root/html/files/: index.html  style.css
root/html/gallery/: index.html  style.css
root/html/submit/: index.html
root/html/test/: bla.html  index.html
root/html/test1/: 400-BadRequest.html  403-Forbidden.html  405-MethodNotAllowed.html  501-NotImplemented.html
root/webserv/cgi-bin/: bad.sh  databasedelete.py  directory_listing.py  env.c  hello.py  hello.sh  main.c  post.py  sleep.py  submit.py  test.cgi  whoami.sh
src/: Constants.h  main.cpp  pch.h
src/Api/: Api.cpp  Api.h  api.cpp
src/Cgi/: Cgi.cpp  Cgi.h  env.cgi  test.cpp
src/Config/: .gitignore  Config.cpp  Config.h  ConfigDirectiveHandlers.cpp  ConfigInputConverters.cpp  ConfigInputValidators.cpp  ConfigParser.cpp  ConfigParser.h  ConfigTokenizer.cpp  Makefile  ServerSettings.cpp  ServerSettings.h  TemplateFunctions.h  colours.hpp  parsertest.conf  test.cpp
src/Config/testconfigs/: cgiconfig.conf  cleanconfig.conf  clientbody.conf  errorpages.conf  multipleserverports.conf  ports.conf  redirects.conf  relativeroot.conf  servernames.conf
src/Core/: Core.h  Log.cpp  Log.h
src/Server/: Client.cpp  Client.h  ConnectionManager.cpp  ConnectionManager.h  HttpParser.cpp  HttpParser.h  HttpRequestParser.cpp  HttpRequestParser.h  NewHttpParser.cpp  NewHttpParser.h  RequestHandler.cpp  RequestHandler.h  ResponseGenerator.cpp  ResponseGenerator.h  ResponseSender.cpp  ResponseSender.h  Serevr.cpp  Server.cpp  Server.h
src/Server/Response/: ResponseGenerator.cpp  ResponseGenerator.h  ResponseGeneratorDelete.cpp  ResponseGeneratorGet.cpp  ResponseGeneratorPost.cpp
src/Utils/: Utils.h
src/cgi/: Cgi.cpp  Cgi.h
